--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "koa": "^2.11.0",
-    "koa-router": "^8.0.7"
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^8.0.7",
+    "mongoose": "^5.8.12"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
