--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.7",
@@ -15,6 +16,6 @@
   },
   "scripts": {
     "start": "node src",
-    "start:dev": "nodemon --watch src/ src/index.js"
+    "start:dev": "nodemon --watch src/ -r esm src/index.js"
   }
 }
