--- a/blog-frontend/package.json
+++ b/blog-frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "immer": "^5.3.6",
+    "quill": "^1.3.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -40,5 +41,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:4000/"
+  "proxy": "http://localhost:4000/"
 }
