--- a/blog-backend/package.json
+++ b/blog-backend/package.json
@@ -12,7 +12,8 @@
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.7",
-    "mongoose": "^5.8.12"
+    "mongoose": "^5.8.12",
+    "sanitize-html": "^1.22.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
