--- a/blog-backend/package.json
+++ b/blog-backend/package.json
@@ -12,6 +12,7 @@
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^8.0.7",
+    "koa-static": "^5.0.0",
     "mongoose": "^5.8.12",
     "sanitize-html": "^1.22.0"
   },
